vite-ts-frontend/src/Components/Gallery.scss
@import "../styles/variables";
@import "../styles/mixins";

@include opacity-mixin(img-op-anim, 0, 1);

.gallery-bg {
  background-color: rgba(15, 15, 15, 0.745);
  height: 100%;
}

#gallery {
  display: flex;
  gap: 4vmin;
  position: absolute;
  left: 20%;
  top: 50%;
  user-select: none;
  transform: translate(0%, -50%);
  animation-name: slide-anim;
  animation-duration: 2s;
}

#gallery > .img {
  width: 40vmin;
  height: 56vmin;
  object-fit: cover;
  object-position: 100% center;
  border-radius: 2%;
  animation: img-op-anim 1s;
  &:hover {
    border: $image-border;
  }
}

.focus-img {
  display: flex;
  justify-content: center;
  position: relative;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.657);
  animation: img-op-anim 1s;
}

.focus-img > img {
  position: absolute;
  top: 5%;
  z-index: 9;
  width: 70%;
  height: auto;
  border: $image-border;
}

@media only screen and (max-width: 1000px) {
  #gallery {
    flex-direction: column;
    height: 80%;
    top: 15%;
    left: 10vmin;
    overflow-y: scroll;
    transform: none;
    animation-name: none;
    animation-duration: 0s;
  }

  #gallery > .img {
    width: 80vmin;
    height: auto;
    animation: none;
  }

  .focus-img > img {
    width: 80vmin;
  }
}

